Fix booking controller and DTO validation